# GameEngine

./: .gitignore  CMakeLists.txt  IlmeeeEditorConfig.cmake.in  IlmeeeEngineConfig.cmake.in  README.md
assets/scripts/: TrainClassAndMethod.cpp
assets/shaders/: gizmo.vert  grid.frag  grid.vert  shader.frag  shader.vert  sprite.frag  sprite.vert
assets/videos/livewallpaper/: shiroko.webm
src/: IlmeeeEditor.rc  IlmeeeEngine.rc  SimpleRenderer.cpp  main.cpp  resources.rc
src/header/: HandlerProject.hpp  MainWindow.hpp  SecondaryWindow.hpp  SimpleRenderer.hpp  VideoPlayer.hpp  assets.hpp
src/header/core_engine/: Debugger.hpp  GLHeader.hpp  NetworkManager.hpp  Scene.hpp  SceneRenderer2D.hpp  SceneRenderer3D.hpp  SceneSerializer.hpp  TextureManager.hpp  test_glsl.hpp  test_vulkan.hpp
src/header/core_engine/core/: Component.hpp  CoreDebugger.h  EngineCore.hpp  GameEngine.h  GameObject.hpp  LifeCycleManager.hpp  Scene.hpp
src/header/core_engine/core_editor/: IlmeeeEditor.h  TCPConnection.hpp
src/header/ui/: Application.hpp  FFmpegWrapper.hpp  HandlerProject.hpp  MainWindow.hpp  VideoPlayer.hpp  assets.hpp
src/scripts/: ApplicationManager.cpp  Check_Environment.cpp  HandlerChildWindow.cpp  HandlerProject.cpp  Hub.cpp  MainWindow.cpp  SecondaryWindow.cpp  VideoPlayer.cpp  assets.cpp  test_glew.cpp  test_glm.cpp  test_glsl.cpp  test_main.cpp  test_vulkan.cpp
src/scripts/core_engine/: SceneRenderer2D.cpp  SceneRenderer3D.cpp  SceneSerializer.cpp  TextureManager.cpp
src/scripts/core_engine/core/: CoreDebugger.cpp  EngineCore.cpp  GameEngine.cpp  HandlerLauncher.cpp  Launcher.cpp  LifeCycleManager.cpp
src/scripts/core_engine/core_editor/: IlmeeeEditor.cpp
src/scripts/ui/: Check_Environment.cpp  HandlerChildWindow.cpp  HandlerProject.cpp  MainWindow.cpp  SecondaryWindow.cpp  VideoPlayer.cpp  assets.cpp  test_main.cpp
